# rmqfwd

./: .env  .gitignore  .travis.yml  Cargo.toml  README.md  default.nix  docker-compose.yml  notes.md  shell.nix
docker/: .gitignore  Dockerfile  build.sh
k8s/es/: kibana.yml  load-balancer.yml  service.yml  statefulset.yml
k8s/rmq/: Dockerfile  rabbitmq.config  statefulset.yml
src/: es.rs  fs.rs  http.rs  lib.rs  main.rs  opt.rs  rmq.rs
src/es/: http.rs  mod.rs  query.rs
