[package]
name = "rmqfwd"
version = "0.1.0"
authors = ["andrfior <andrea.giulio.fiore@gmail.com>"]

[dependencies]
lapin-futures = "^0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
futures = "0.1"
log = "0.4"
env_logger = "0.5"
rs-es = "0.10"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
maplit = "1" 
uuid = { version = "0.6", features = ["serde", "v4"] }