[package]
name = "rmqfwd"
version = "0.1.0"
authors = ["Andrea Fiore <andrea.giulio.fiore@gmail.com>"]

[dependencies]
lapin-futures = "^0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-codec = "0.1"
futures = "0.1"
log = "0.4"
env_logger = "0.5"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
clap = "2"
hyper = "0.12"
url = "1.7"
failure = "0.1.2"
failure_derive = "0.1.2"
